--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TP2_java</string>
+    <string name="description">Description</string>
+    <string name="fruit">Fruit</string>
+    <string name="ajouter">Ajouter</string>
 </resources>
